src/snapshots/namma_diesel__codegen__tests__renders_single_table_schema.snap
---
source: src/codegen.rs
expression: "file_ending(&files, \"schema/ride.rs\").contents"
---

diesel::table! {
    ride (id) {
        id -> Varchar,
        status -> Varchar,
        fare -> Nullable<Numeric>,
        driver_id -> Varchar,
        created_at -> Timestamptz,
        updated_at -> Timestamptz,
    }
}
